tests/integration/snapshots/integration__conformance__i_number_very_big_negative_int.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
[-237462374673276894279832749832423479823246327846]
stderr ---
