tests/integration/snapshots/integration__conformance__i_object_key_lone_2nd_surrogate.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"\uDFAA":0}
stdout ---
{"\uDFAA":0}

stderr ---
