tests/integration/snapshots/integration__conformance__i_string_1st_surrogate_but_2nd_missing.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\uDADA"]
stdout ---
["\uDADA"]

stderr ---
