tests/integration/snapshots/integration__conformance__i_string_1st_valid_surrogate_2nd_invalid.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
["\uD888\u1234"]
stdout ---
["\uD888\u1234"]

stderr ---
