tests/integration/snapshots/integration__conformance__i_string_incomplete_surrogate_and_escape_valid.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uD800\n"]
stdout ---
[
    "\uD800\n"
]

stderr ---
