tests/integration/snapshots/integration__conformance__i_string_incomplete_surrogate_pair.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uDd1ea"]
stdout ---
["\uDd1ea"]

stderr ---
